WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248413
Fix caret move by line when padding-top is set
https://bugs.webkit.org/show_bug.cgi?id=248413
Summary
Fix caret move by line when padding-top is set
Ahmad Saleem
Reported
2022-11-28 11:51:58 PST
Hi Team, While going through Blink's commit, I came across another commit, where the testcase is failing two on Safari Technology Preview 158 compared to other browsers (Chrome Canary 110 and Firefox Nightly 109): Blink Commit -
https://chromium.googlesource.com/chromium/blink/+/87805d6f9313997171b970d847e141a18b95dcf7
Test Case (Failing two) -
https://jsfiddle.net/0dufm2eb/show
I haven't explored whether it could be 1-1 merge possible but just wanted to raise for tracking in future. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-05 11:52:20 PST
<
rdar://problem/102991672
>
Ahmad Saleem
Comment 2
2023-02-02 09:53:54 PST
It is partial merge and on local testing while only fixing VisibleUnits.cpp / h, this test case passes.
Ahmad Saleem
Comment 3
2023-02-02 10:13:02 PST
PR -
https://github.com/WebKit/WebKit/pull/9534
Let's give it a try.
EWS
Comment 4
2023-02-06 12:06:23 PST
Committed
259906@main
(7e9c27142b2f): <
https://commits.webkit.org/259906@main
> Reviewed commits have been landed. Closing PR #9534 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug